add repo url to write-up

--- a/spotifyWrite.ipynb
+++ b/spotifyWrite.ipynb
@@ -254,7 +254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong><em>Check out the code for this project: GITHUB REPO LINK</em></strong>"
+    "<strong><em>Check out [the code for this project!](https://github.com/kvu1/spot-a-pie)</em></strong>"
    ]
   }
  ],
