--- a/spotify.rmd
+++ b/spotify.rmd
@@ -45,24 +45,8 @@ dislike_spotify <- dislike_spotify[order(dislike_spotify$artist, dislike_spotify
 spotify <- rbind(like_spotify, dislike_spotify)
 write.csv(spotify, "bigPlaylist.csv")
 
-# guin_spotify <- read_csv('spotifyGuin.csv') %>%
-#   rename(title = `0`, artist = `0_1`) %>%
-#   mutate(duration_sec = duration_ms / 1000) %>%
-#   select(-c(X1, analysis_url, id, track_href, type, uri, duration_ms))
-# guin_spotify <- guin_spotify[order(guin_spotify$artist, guin_spotify$title),]
-
 # variable glossary
 # https://developer.spotify.com/documentation/web-api/reference/tracks/get-audio-features/
-```
-
-```{r}
-# cool...but exclude from faceted plot maybe?
-# I like not (sad) very danceable tracks
-# ggplot(data = spotify,
-#        mapping = aes(x = danceability, y = valence, col = like)) +
-#   geom_point(alpha = 0.5) +
-#   geom_vline(aes(xintercept = 0.5)) +
-#   geom_hline(aes(yintercept = 0.5))
 ```
 
 ```{r}
@@ -70,7 +54,7 @@ music_var <- spotify[, 3:16] %>%
   mutate(like = as.numeric(like))
 corr <- round(cor(music_var), 2)
 
-# correlogram!
+# correlogram
 ggcorrplot(corr,
            type = "upper",
            lab = TRUE,
@@ -90,7 +74,6 @@ seb <- spotify %>%
 # more likely to enjoy low-energy, highly acoustic tracks
 plot1 <- ggplot(data = spotify,
                 mapping = aes(y = acousticness, x = energy, col = like)) +
-                #geom_point(alpha = 0.45, show.legend = FALSE) +
                 geom_jitter(alpha = 0.4, show.legend = FALSE) +
                 scale_color_brewer(palette = "Set1") +
                 geom_point(data = seb,
@@ -103,7 +86,6 @@ plot1 <- ggplot(data = spotify,
 # i like (sad?) low energy tracks
 plot2 <- ggplot(data = spotify,
                 mapping = aes(y = valence, x = energy, col = like)) +
-                #geom_point(alpha = 0.45, show.legend = FALSE) +
                 geom_jitter(alpha = 0.4, show.legend = FALSE) +
                 scale_color_brewer(palette = "Set1") +
                 geom_point(data = seb,
@@ -113,11 +95,10 @@ plot2 <- ggplot(data = spotify,
                 labs(x = NULL) +
                 theme_minimal(base_family = "Avenir")
 
-# whoa...weird
+# whoa...cool
 plot3 <- ggplot(data = spotify,
                 mapping = aes(y = loudness, x = energy, col = like)) +
                 geom_jitter(alpha = 0.4, show.legend = FALSE) +
-                #geom_point(alpha = 0.45) +
                 scale_color_brewer(palette = "Set1") +
                 geom_point(data = seb,
                            col = "purple3") +
@@ -128,20 +109,6 @@ plot3 <- ggplot(data = spotify,
 ```
 
 ```{r}
-# go back and find way to label this grob?
-# format the grob to optimize legend location
-# get_legend <- function(myggplot) {
-#     tmp <- ggplot_gtable(ggplot_build(myggplot))
-#     leg <- which(sapply(tmp$grobs, function(x) x$name) == "guide-box")
-#     legend <- tmp$grobs[[leg]]
-#     return(legend)
-#     }
-# legend <- get_legend(plot3)
-
-# custom_theme <- gridExtra::ttheme_default(
-#   base_family = "Avenir"
-# )
-
 top_label <- grid.text("Exploring My Spotify Musical Preferences",
                        gp = gpar(fontfamily = "Avenir"))
 caption <- grid.text("Red points are\n tracks that I like,\n blue points ones\n I dislike.\n\n We can\n observe that I'm\n more likely to\n enjoy mellow\n songs that match\n my disposition.",
@@ -153,64 +120,3 @@ grid.arrange(plot1, plot2, plot3,
              right = caption)
 ```
 
-```{r}
-# consider getting rid of these...not particularly elucidating w/o dislikes
-# plot4 <- ggplot(data = guin_spotify,
-#                 mapping = aes(y = acousticness, x = energy)) +
-#                 geom_point(alpha = 0.45, show.legend = FALSE) +
-#                 scale_color_brewer(palette = "Set1") +
-#                 geom_vline(aes(xintercept = 0.5)) +
-#                 geom_hline(aes(yintercept = 0.5)) +
-#                 labs(x = NULL) +
-#                 theme_minimal(base_family = "Avenir")
-#
-# plot5 <- ggplot(data = guin_spotify,
-#                 mapping = aes(y = valence, x = energy)) +
-#                 geom_point(alpha = 0.45, show.legend = FALSE) +
-#                 scale_color_brewer(palette = "Set1") +
-#                 geom_vline(aes(xintercept = 0.5)) +
-#                 geom_hline(aes(yintercept = 0.5)) +
-#                 labs(x = NULL) +
-#                 theme_minimal(base_family = "Avenir")
-#
-# plot6 <- ggplot(data = guin_spotify,
-#                 mapping = aes(y = loudness, x = energy)) +
-#                 geom_point(alpha = 0.45) +
-#                 scale_color_brewer(palette = "Set1") +
-#                 geom_vline(aes(xintercept = 0.5)) +
-#                 labs(col = "Like/Dislike") +
-#                 theme_minimal(base_family = "Avenir") +
-#                 theme(legend.position = "none")
-#
-# grid.arrange(plot4, plot5, plot6,
-#              ncol = 1)
-```
-
-```{r}
-# get rid of these
-# # eh
-# ggplot(data = spotify,
-#        mapping = aes(x = energy, y = instrumentalness, col = like)) +
-#   geom_point(alpha = 0.5) +
-#   geom_vline(aes(xintercept = 0.5)) +
-#   geom_hline(aes(yintercept = 0.5))
-#
-# # eh again
-# ggplot(data = spotify,
-#        mapping = aes(x = acousticness, y = instrumentalness, col = like)) +
-#   geom_point(alpha = 0.5) +
-#   geom_vline(aes(xintercept = 0.5)) +
-#   geom_hline(aes(yintercept = 0.5))
-```
-
-```{r}
-# # not happening lol
-# # attempt PCA visualization
-# spotify_indep <- spotify[, 3:15]
-# pc <- prcomp(spotify_indep, scale. = TRUE)
-# kable(pc$rotation)
-#
-# # nasty lol
-# ggbiplot(pc, scale = 1) +
-#   theme_minimal()
-```
