--- a/spotifyWrite.ipynb
+++ b/spotifyWrite.ipynb
@@ -22,8 +22,7 @@
    "metadata": {},
    "source": [
     ">**\"I must despise the world which does not know \n",
-    ">that music is a higher revelation than all wisdom  \n",
-    ">and philosophy.\"**\n",
+    ">that music is a higher revelation than all wisdom and philosophy.\"**\n",
     ">- *Ludwig van Beethoven (allegedly)*"
    ]
   },
@@ -35,7 +34,7 @@
     "\n",
     "I was entranced. I could observe in the CSO video all of the qualities that make music so captivating to me: the synchrony of so many moving parts, the rock star mane of Riccardo Muti, and the transcendent exposition of emotion from the performers. Formerly inclined never to venture beyond my safe haven genres of hip-hop and pop, I began to listen to more classical, more jazz, more anything. I even dabbled into those solitary genres that I had previously embargoed from my music library: country and metal.\n",
     "\n",
-    "As my music taste has expanded, music itself has taken up a more substantial mantle in my life. I relish the opportunity to chat about music recommendations with friends and have started to make music myself (I began to teach myself how to play the ukulele and piano within the past few years). At this point, it almost goes without saying that music is persistently on my mind. Nowadays, as my appreciation for data science grows in parallel with my appreciation for music, I think a lot about how to find good music. Listening to bad music bears some measure of disutility for me- those are 2-5 minutes of my life that I'll never get back. I began thinking about how I could find good music (relative to my standards) more efficiently. Once I discovered that Spotify offers an API for developers, I wanted to explore the application of machine learning algorithms to this question of music taste."
+    "As my music taste has expanded, music itself has taken up a more substantial mantle in my life. I relish the opportunity to chat about music recommendations with friends and have started to make music myself (I began to teach myself how to play the ukulele and piano within the past few years). At this point, it almost goes without saying that music is persistently on my mind. Nowadays, as my appreciation for data science grows in parallel with my appreciation for music, I think a lot about how to find good music. Listening to bad music bears some measure of disutility for me: those are 2-5 minutes of my life that I'll never get back. I began thinking about how I could find good music (relative to my standards) more efficiently. Once I discovered that Spotify offers an API for developers, I wanted to explore the application of machine learning algorithms to this question of music taste."
    ]
   },
   {
@@ -247,7 +246,23 @@
     "\n",
     "The ideal way to gather data for this project would be to begin logging from birth all of the songs that I've listened to throughout my two decades of living and tag each song with a binary 'yes' or 'no.' Unfortunately, I lacked the foresight to do so as a child.\n",
     "\n",
-    "In the future, I'd like to apply some of the methods presented here to data that more comprehensively captures my music tastes and to data sourced from peers. Perhaps this approach will enable quantitative comparisons of peer-to-peer music tastes. Any attempt at such comparisons would require that all participants compile a playlist of songs that they hate (I've yet to meet anybody who keeps around a dedicated playlist of disliked tracks). In addition to this addition to the dataset, I'd also like to implement other modeling techniques (e.g. Keras neural network or gradient boosting) to further improve predictive power."
+    "In the future, I'd like to apply some of the methods presented here to data that more comprehensively captures my music tastes and to data sourced from peers. Perhaps this approach will enable quantitative comparisons of peer-to-peer music tastes. Any attempt at such comparisons would require that all participants compile a playlist of songs that they hate (I've yet to meet anybody who keeps around a dedicated playlist of disliked tracks). \n",
+    "\n",
+    "Even without such a playlist, some neat comparisons can still be made. My friend Guin Mesh was kind enough to allow me to use her playlist for this analysis. With over 1,200 songs in one playlist, Guin has certainly built up a more robust population of liked tracks in Spotify than I have so far. Looking at the medley of navy (my favorite color), green (Guin's favorite color, I think?), and orange, some intriguing patterns arise. Notice in the bottom subplot that I appear to be more amenable to very quiet songs than Guin is. Looking at the tabulation of mutually liked songs reveals that Guin and I both love Tame Impala and Frank Ocean- songs by these artists comprise 16 out of the 77 tracks that our playlists share."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Scatterplot Comparing Friends' Music Tastes](images/peer.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In addition to acquiring a larger dataset through interaction with peers' playlists, I'd also like to implement other modeling tools (e.g. Keras neural network or gradient boosting) to further improve predictive power. With that in mind, this exercise was still incredibly fun for me. I'm especially grateful to Spotify for creating an API that grants users access to such quality data. Without them, I wouldn't have been able to separate the signal from the noise."
    ]
   },
   {
