revert to markdown syntax for display

--- a/spotifyWrite.ipynb
+++ b/spotifyWrite.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 style = \"font-family: avenir\"><em>A Higher Revelation: An Algorithmic Predictor of User Music Preferences</em></h1>\n",
-    "<h3 style = \"font-family: avenir\">By Kyle Vu</h3>\n",
-    "<h4 style = \"font-family: avenir\">August 6, 2018</h4>"
+    "# *A Higher Revelation: An Algorithmic Predictor of User Music Preferences*\n",
+    "### By Kyle Vu\n",
+    "#### August 6, 2018"
    ]
   },
   {
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style = \"font-family: avenir\">Getting the Data</h2>"
+    "## Getting the Data"
    ]
   },
   {
@@ -122,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style = \"font-family: avenir\">Exploring the Data</h2>"
+    "## Exploring the Data"
    ]
   },
   {
@@ -188,7 +188,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img alt \"Hyperparameter Tuning\" src = \"images/tuning.png\">"
+    "![Hyperparameter Tuning](images/tuning.png)"
    ]
   },
   {
@@ -229,7 +229,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style = \"font-family: avenir\">Moving Forward</h2>"
+    "## Moving Forward"
    ]
   },
   {
@@ -269,7 +269,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong><em>Check out [the code for this project!](https://github.com/kvu1/spot-a-pie)</em></strong>"
+    "**Check out [the code for this project!](https://github.com/kvu1/spot-a-pie)**"
    ]
   }
  ],
