--- a/spotifyWrite.ipynb
+++ b/spotifyWrite.ipynb
@@ -204,16 +204,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><img alt = \"K-Nearest Neighbors Confusion Matrix\" src = \"images/knn.png\" style = \"display: inline; width: 400px; height: 320px;\">\n",
-    "<img alt = \"Random Forest Confusion Matrix\" src = \"images/forest.png\" style = \"display: inline; width: 400px; height: 320px;\"></center>"
+    "![Confusion Matrices, Pt. 1](images/row1.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><img alt = \"Logistic Regression Confusion Matrix\" src = \"images/log.png\" style = \"display: inline; width: 400px; height: 320px;\">\n",
-    "<img alt = \"Decision Tree Confusion Matrix\" src = \"images/tree.png\" style = \"display: inline; width: 400px; height: 320px;\"></center>"
+    "![Confusion Matrices, Pt. 2](images/row2.png)"
    ]
   },
   {
