--- a/spotifyWrite.ipynb
+++ b/spotifyWrite.ipynb
@@ -174,7 +174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style = \"font-family: avenir\">Applying Machine Learning Models</h2>"
+    "## Applying Machine Learning Models"
    ]
   },
   {
